refactor: 调整项目结构
前后端分离，补充项目代码规范配置和文档

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - "8080:8080"  # 前端端口
       - "3000:3000"  # API端口
     volumes:
-      - ${HOST_PATH:-/home}:/files  # 挂载宿主机文件系统，可以根据需要修改
+      - /Users/jimmyluo/Downloads:/files  # 挂载宿主机文件系统，可以根据需要修改
     environment:
       - NODE_ENV=production
+      - BASE_PATH=/files
     container_name: file-explorer
     restart: unless-stopped
