--- a/package.json
+++ b/package.json
@@ -1,48 +1,22 @@
 {
-  "name": "linux-file-explorer",
+  "name": "file-explorer",
   "version": "0.1.0",
-  "description": "Linux文件资源管理器，Docker应用，支持Windows资源管理器功能并增加硬链接和软链接功能",
-  "main": "server/index.js",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "server:dev": "nodemon server/index.js",
-    "server:start": "node server/index.js",
-    "start": "npm run build && npm run server:start",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "dev": "pnpm -r --parallel dev",
+    "build": "pnpm -r build",
+    "start": "pnpm -r --parallel start",
+    "install": "pnpm install",
+    "clean": "pnpm -r clean",
+    "lint": "pnpm -r lint",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
-  "keywords": [
-    "linux",
-    "file-explorer",
-    "docker",
-    "vue",
-    "node"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "archiver": "^5.3.1",
-    "axios": "^1.9.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "extract-zip": "^2.0.1",
-    "fs-extra": "^11.1.1",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6"
+  "engines": {
+    "node": ">=18.12.0",
+    "pnpm": ">=8.0.0"
   },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.4",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "nodemon": "^3.0.1",
-    "pinia": "^2.1.6",
-    "sass": "^1.67.0",
-    "vite": "^4.4.9",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "pnpm@8.15.3"
 }
