--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,23 +8,23 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "vite preview",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist && rimraf node_modules",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "axios": "^1.6.7",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.22.0",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
-    "sass": "^1.67.0",
-    "vite": "^4.4.9"
+    "sass": "^1.71.1",
+    "vite": "^5.1.4"
   }
-} 
+}
