--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "pnpm -r --parallel start",
     "clean": "pnpm -r clean && rimraf node_modules && pnpm store prune",
     "lint": "pnpm -r lint",
-    "docker:build": "docker-compose build",
+    "docker:build": "docker-compose build --no-cache",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
+    "docker:restart": "pnpm docker:down && pnpm docker:build && pnpm docker:up",
     "docker:logs": "docker-compose logs -f",
     "docker:prune": "docker system prune -f",
-    "docker:clean": "pnpm docker:down && pnpm docker:prune"
+    "docker:clean": "pnpm docker:down && pnpm docker:prune",
+    "docker:rm": "docker stop $(docker ps -q --filter ancestor=file-explorer) && docker rm $(docker ps -aq --filter ancestor=file-explorer)",
+    "docker:rmi": "docker rmi $(docker images -q --filter ancestor=file-explorer)"
   },
   "engines": {
     "node": ">=18.12.0",
