--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,20 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.22.0",
+    "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.1.5",
     "prettier": "^3.2.5",
+    "remixicon": "^4.6.0",
     "rimraf": "^5.0.5",
     "sass": "^1.71.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
 }
