--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-explorer-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,29 +8,51 @@
     "build": "vite build",
     "type-check": "vue-tsc --noEmit",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:e2e": "cypress run",
+    "test:e2e:dev": "cypress open",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "start": "vite preview",
     "clean": "rimraf dist && rimraf node_modules",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "analyze": "vite build --mode analyze"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "@remixicon/vue": "^4.6.0",
+    "axios": "^1.5.0",
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.22.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.1.5",
-    "prettier": "^3.2.5",
-    "remixicon": "^4.6.0",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "terser": "^5.29.2",
+    "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^4.4.9",
+    "vite-plugin-compression": "^0.5.1",
+    "vitest": "^0.34.4",
+    "vue-tsc": "^1.8.27"
   }
 }
